# lion-anthropic

./: README.md  hello.py  pyproject.toml  test.ipynb
lion_anthropic/: __init__.py  anthropic_max_output_token_data.yaml  anthropic_model.py  anthropic_price_data.yaml  anthropic_service.py  model_capability.py  model_version.py
lion_anthropic/api_endpoints/: api_request.py  match_data_model.py  match_response.py
lion_anthropic/api_endpoints/messages/: message.py  request_body.py  response_body.py  system.py
lion_anthropic/api_endpoints/messages/contents/: __init__.py  base_content.py  document.py  image.py  tool_result.py
lion_anthropic/api_endpoints/messages/responses/: content.py  delta.py  events.py  stream_events.py  types.py  usage.py
lion_anthropic/api_endpoints/messages/tools/: bash.py  computer_use.py  text_editor.py  tool_choice.py  tool_input_schema.py
